fix: update head tag

--- a/index.html
+++ b/index.html
@@ -10,8 +10,37 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Additional meta tags -->
+    <meta name="description" content="Profile of Tran Hoang Nam" />
+    <meta name="author" content="Tran Hoang Nam" />
+    <meta name="keywords" content="HTML, CSS, JavaScript, Web Development, Tran Hoang Nam" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- Adjust the color to match your site's theme -->
+    <meta property="og:title" content="Tran Hoang Nam" />
+    <meta
+      property="og:description"
+      content="Profile of Tran Hoang Nam"
+    />
+    <meta property="og:image" content="/public/images/profile.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https//tranhoangnam.net" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tran Hoang Nam" />
+    <meta
+      name="twitter:description"
+      content="Profile of Tran Hoang Nam"
+    />
+    <meta
+      name="twitter:image"
+      content="/public/images/profile.png"
+    />
+    <!-- End of additional meta tags -->
+
     <title>Tran Hoang Nam</title>
   </head>
+
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
