--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       property="og:description"
       content="Profile of Tran Hoang Nam"
     />
-    <meta property="og:image" content="/public/images/profile.png" />
+    <meta property="og:image" content="/images/profile.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https//tranhoangnam.net" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -34,7 +34,7 @@
     />
     <meta
       name="twitter:image"
-      content="/public/images/profile.png"
+      content="/images/profile.png"
     />
     <!-- End of additional meta tags -->
 
